basic home page layout

--- a/index.html
+++ b/index.html
@@ -1,7 +1,61 @@
-<html>
-    <body>
-        <h1>
-            <p>testing?</p>
-        </h1>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Eric Galego</title>
+    <link href="styles.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 
+    rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" 
+    crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Eric's website">
+    <meta name="keywords" content="CSS, JavaScript, Personal, Netlify">
+    <meta name="author" content="Eric Galego">
+
+    <link rel="icon" type="image/png" href="assets/peepog.jpg">
+  </head>
+  <body>
+    <div class="background">
+      <span class="rain"></span>
+      <div class="header">
+        <h1><span class="title-name"> Eric Galego</span></h1>
+        <h2>
+          Under Development...
+        </h2>
+      </div>
+      <div class="options">
+        <h3>Options</h3>
+          <div class="box-container">Weekly Recommendations
+            <p>(UNDER DEVELOPMENT)<br><br>Here are some recommendations for movies, tv shows, and books
+                they will be automatically updated weekly.
+            </p>
+            <a href="recommendations.html" class="button" style="text-decoration: none;">GO HERE</a>
+          </div>
+          <div class="box-container">UNDER DEVELOPMENT<br><br>
+            <p>
+            </p>
+            <a class="button disabled" style="text-decoration: none;">GO HERE</a>
+          </div>
+          <div class="box-container">UNDER DEVELOPMENT<br><br>
+            <p></p>
+            <a class="button disabled" style="text-decoration: none;">GO HERE</a>
+          </div>
+          <div class="box-container">UNDER DEVELOPMENT<br><br>
+            <p></p>
+            <a class="button disabled" style="text-decoration: none;">GO HERE</a>
+          </div>
+      </div>
+
+      <div class="footer">
+        <p>
+          Temp footer 
+        </p>
+        <span><a class="footer-buttons disabled"><i class="fa fa-id-card" aria-hidden="true"></i></a></span>
+        <span><a class="footer-buttons" href="https://github.com//galegoer/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></span>
+        <span><a class="footer-buttons" href="https://youtube.com/" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></span>
+        <span><a class="footer-buttons" href="https://instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></span>
+        <span><a class="footer-buttons disabled"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></span>
+      </div>    
+    </div>
+  </body>
 </html>
