updated mobile view, added redirects

--- a/index.html
+++ b/index.html
@@ -16,34 +16,43 @@
   </head>
   <body>
     <div class="background">
-      <span class="rain"></span>
+    </div>
       <div class="header">
-        <h1><span class="title-name"> Eric Galego</span></h1>
+        <h1><span class="title-name">Eric Galego</span></h1>
+      </div>
         <h2>
           Under Development...
         </h2>
-      </div>
       <div class="options">
         <h3>Options</h3>
-          <div class="box-container">Weekly Recommendations
+          <div class="box-container">
+            <a href="recommendations.html" class="button" style="text-decoration: none;">GO HERE</a>
+            Weekly Recommendations
             <p>(UNDER DEVELOPMENT)<br><br>Here are some recommendations for movies, tv shows, and books
                 they will be automatically updated weekly.
             </p>
-            <a href="recommendations.html" class="button" style="text-decoration: none;">GO HERE</a>
+            
           </div>
-          <div class="box-container">UNDER DEVELOPMENT<br><br>
+          <div class="box-container">
+            <a class="button disabled" style="text-decoration: none;">GO HERE</a>
+            UNDER DEVELOPMENT<br><br>
             <p>
             </p>
-            <a class="button disabled" style="text-decoration: none;">GO HERE</a>
           </div>
-          <div class="box-container">UNDER DEVELOPMENT<br><br>
-            <p></p>
+          <div class="box-container">
             <a class="button disabled" style="text-decoration: none;">GO HERE</a>
+            UNDER DEVELOPMENT<br><br>
+            <p>
+
+            </p>
           </div>
-          <div class="box-container">UNDER DEVELOPMENT<br><br>
-            <p></p>
+          <div class="box-container">
             <a class="button disabled" style="text-decoration: none;">GO HERE</a>
-          </div>
+            UNDER DEVELOPMENT<br><br>
+            <p>
+
+            </p>
+            </div>
       </div>
 
       <div class="footer">
@@ -55,7 +64,6 @@
         <span><a class="footer-buttons" href="https://youtube.com/" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></span>
         <span><a class="footer-buttons" href="https://instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></span>
         <span><a class="footer-buttons disabled"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></span>
-      </div>    
-    </div>
+      </div>
   </body>
 </html>
