updated nav bar

--- a/about.html
+++ b/about.html
@@ -13,8 +13,6 @@
     <meta name="description" content="Eric's website">
     <meta name="keywords" content="CSS, JavaScript, Personal, Netlify">
     <meta name="author" content="Eric Galego">
-
-
 </head>
 <body>
 
@@ -60,14 +58,15 @@
         </ul>
       </nav>
 
+
     <div class="background">
         <div class="header">
             <h1><span class="title-name"> Eric Galego</span></h1>
             <h2>
-              404 Error
+              About Me...
             </h2>
           </div>
         <a href="index.html">Go Back Home</a>
     </div>
-    </body>
+</body>
 </html>
