--- a/index.html
+++ b/index.html
@@ -15,8 +15,48 @@
     <link rel="icon" type="image/png" href="assets/peepog.jpg">
   </head>
   <body>
+    <nav class="navbar">
+      <ul class="navbar-nav">
+        <li class="logo">
+          <a href="#" class="nav-link">
+            <i class="fa fa-hand-o-right" aria-hidden="true"></i>
+            <span class="link-text">Eric</span>
+            <i class="fa fa-thumbs-o-up hiddenthumb" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="about.html" class="nav-link">
+            <i class="fa fa-id-card" aria-hidden="true"></i>
+            <span class="link-text">About</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <i class="fa fa-spinner" aria-hidden="true"></i>
+            <span class="link-text">Temp</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="https://github.com/galegoer" target="_blank" class="nav-link">
+            <i class="fa fa-github" aria-hidden="true"></i>
+            <span class="link-text">Github</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="https://youtube.com/" target="_blank" class="nav-link">
+            <i class="fa fa-youtube-play" aria-hidden="true"></i>
+            <span class="link-text">YouTube</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <i class="fa fa-cog" aria-hidden="true"></i>
+            <span class="link-text">Settings</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
     <div class="background">
-    </div>
       <div class="header">
         <h1><span class="title-name">Eric Galego</span></h1>
       </div>
@@ -59,11 +99,12 @@
         <p>
           Temp footer 
         </p>
-        <span><a class="footer-buttons disabled"><i class="fa fa-id-card" aria-hidden="true"></i></a></span>
-        <span><a class="footer-buttons" href="https://github.com//galegoer/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></span>
-        <span><a class="footer-buttons" href="https://youtube.com/" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></span>
-        <span><a class="footer-buttons" href="https://instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></span>
-        <span><a class="footer-buttons disabled"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></span>
+        <!-- <span><a class="footer-buttons disabled"><i class="fa fa-id-card" aria-hidden="true"></i></a></span> -->
+        <!-- <span><a class="footer-buttons" href="https://github.com//galegoer/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></span> -->
+        <!-- <span><a class="footer-buttons" href="https://youtube.com/" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></span> -->
+        <!-- <span><a class="footer-buttons" href="https://instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></span> -->
+        <!-- <span><a class="footer-buttons disabled"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></span> -->
       </div>
+    </div>
   </body>
 </html>
