--- a/recommendations.html
+++ b/recommendations.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="assets/peepog.jpg">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 
+    rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" 
+    crossorigin="anonymous">
     <title>Eric Galego</title>
     <link href="styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +16,49 @@
 
 
 </head>
-<body>
+  <body>
+    <nav class="navbar">
+      <ul class="navbar-nav">
+        <li class="logo">
+          <a href="#" class="nav-link">
+            <i class="fa fa-hand-o-right" aria-hidden="true"></i>
+            <span class="link-text">Eric</span>
+            <i class="fa fa-thumbs-o-up hiddenthumb" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="about.html" class="nav-link">
+            <i class="fa fa-id-card" aria-hidden="true"></i>
+            <span class="link-text">About</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <i class="fa fa-spinner" aria-hidden="true"></i>
+            <span class="link-text">Temp</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="https://github.com/galegoer" target="_blank" class="nav-link">
+            <i class="fa fa-github" aria-hidden="true"></i>
+            <span class="link-text">Github</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="https://youtube.com/" target="_blank" class="nav-link">
+            <i class="fa fa-youtube-play" aria-hidden="true"></i>
+            <span class="link-text">YouTube</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <i class="fa fa-cog" aria-hidden="true"></i>
+            <span class="link-text">Settings</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+
     <div class="background">
         <div class="header">
             <h1><span class="title-name"> Eric Galego</span></h1>
@@ -23,5 +68,5 @@
           </div>
         <a href="index.html">Go Back Home</a>
     </div>
-    </body>
+  </body>
 </html>
