--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="tierlist.html" class="nav-link">
             <i class="fa fa-spinner" aria-hidden="true"></i>
-            <span class="link-text">Temp</span>
+            <span class="link-text">TierList</span>
           </a>
         </li>
         <li class="nav-item">
@@ -66,7 +66,7 @@
       <div class="options">
         <h3>Options</h3>
           <div class="box-container">
-            <a href="recommendations.html" class="button" style="text-decoration: none;">GO HERE</a>
+            <a href="recommendations.html" class="button" style="position: absolute;">GO HERE</a>
             Weekly Recommendations
             <p>(UNDER DEVELOPMENT)<br><br>Here are some recommendations for movies, tv shows, and books
                 they will be automatically updated weekly.
@@ -74,20 +74,20 @@
             
           </div>
           <div class="box-container">
-            <a class="button disabled" style="text-decoration: none;">GO HERE</a>
+            <a class="button disabled" style="position: absolute;">GO HERE</a>
             UNDER DEVELOPMENT<br><br>
             <p>
             </p>
           </div>
           <div class="box-container">
-            <a class="button disabled" style="text-decoration: none;">GO HERE</a>
+            <a class="button disabled" style="position: absolute;">GO HERE</a>
             UNDER DEVELOPMENT<br><br>
             <p>
 
             </p>
           </div>
           <div class="box-container">
-            <a class="button disabled" style="text-decoration: none;">GO HERE</a>
+            <a class="button disabled" style="position: absolute;">GO HERE</a>
             UNDER DEVELOPMENT<br><br>
             <p>
 
