Added random 2010s music YouTube player
-Untested on https (live server doesn't currently work)

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             
           </div>
           <div class="box-container">
-            <a class="button disabled" style="position: absolute;">GO HERE</a>
-            UNDER DEVELOPMENT<br><br>
-            <p>
+            <a href="randVid.html" class="button" style="position: absolute;">GO HERE</a>
+            Random 2010s Nostalgia
+            <p>Go here to listen to some nostalgic songs from the 2010s.
             </p>
           </div>
           <div class="box-container">
