fixed mobile view and error cases

--- a/randVid.html
+++ b/randVid.html
@@ -69,13 +69,18 @@
             </h2>
 
             <h3>Click below to listen to some nostalgic music from the 2010s maybe some late 2000s :)
+              <br>If there is an error and I ran out of API requests you can
+              check out the <a style="text-decoration: underline;"target="_blank" href="https://www.youtube.com/playlist?list=PLArQ6Xij15ikMnefk5BL5PwdTLfqmtMNz">playlist</a>. 
+              
             </h3>
 
           </div>
         <button id="randomizeVid" class="button">Give me a Random Video</button>
-        <div id="videoSection">   
-            <iframe id="videoFrame" background-color="black" width="800" height="400" src="https://www.youtube.com/embed/H7HmzwI67ec" frameborder="0" allowfullscreen></iframe>
+        <div id="vidSize">
+          <div id="videoSection">   
+            <iframe id="videoFrame" background-color="black" width="600" height="400" src="https://www.youtube.com/embed/H7HmzwI67ec" frameborder="0" allowfullscreen></iframe>
             <!-- <iframe width="1519" height="553" src="https://www.youtube.com/embed/H7HmzwI67ec" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          </div>
         </div>
         <div class="footer">
           <a href="index.html">Go Back Home</a>
