--- a/tierlist.html
+++ b/tierlist.html
@@ -14,11 +14,10 @@
     <meta name="keywords" content="CSS, JavaScript, Personal, Netlify">
     <meta name="author" content="Eric Galego">
 
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
+    <script src="bundle.js"></script>
 
-    <!-- <script src="Scripts/jquer_latest_2.11_.min.js" type="text/javascript"></script> -->
-    <!-- <script src="Scripts/html2canvas.js" type="text/javascript"></script> -->
-</head>
+  </head>
 <body>
 
     <nav class="navbar">
@@ -37,7 +36,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="tierlist.html" class="nav-link">
+            <a href="#" class="nav-link">
               <i class="fa fa-spinner" aria-hidden="true"></i>
               <span class="link-text">TierList</span>
             </a>
@@ -76,8 +75,7 @@
             Make sure you drag the actual image from the image location and not the google image result as it will not display.
           </h3>
 
-          <button type="button" id="previewImg" class="button disabled" style="width: auto; font-size: 1em;">Preview Tier List</button>
-          <a id="saveImg" class="button disabled" href="#">Save Tier List</a>
+          <a id="saveImg" class="button" href="#">Save Tier List</a>
           <div id="previewImage"></div>
         
         </div>
