added recommendations section
- updated home view for mobile

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
       </div>
         <h2>
           Under Development...
-        </h2>
+        </h2>        
+      <h3>Options</h3>
       <div class="options">
-        <h3>Options</h3>
           <div class="box-container">
             <a href="recommendations.html" class="button" style="position: absolute;">GO HERE</a>
             Weekly Recommendations
-            <p>(UNDER DEVELOPMENT)<br><br>Here are some recommendations for movies, tv shows, and books
+            <p>Go here for some of my recommendations movies, tv shows, songs and books
                 they will be automatically updated weekly.
             </p>
             
