--- a/recommendations.html
+++ b/recommendations.html
@@ -15,6 +15,9 @@
     <meta name="author" content="Eric Galego">
 
 
+    <script src="https://www.google.com/jsapi"></script>
+    <script src="recommend.js"></script>
+
 </head>
   <body>
     <nav class="navbar">
@@ -33,9 +36,9 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="tierlist.html" class="nav-link">
             <i class="fa fa-spinner" aria-hidden="true"></i>
-            <span class="link-text">Temp</span>
+            <span class="link-text">TierList</span>
           </a>
         </li>
         <li class="nav-item">
@@ -63,10 +66,39 @@
         <div class="header">
             <h1><span class="title-name"> Eric Galego</span></h1>
             <h2>
-              Under Development...
+              Weekly Recommendations<br/> 
+              Next change:<br/>
+              <div id="timer"></div>
             </h2>
+        </div>
+
+        <div class="categories">
+          
+          <div class="category">
+            <h1>Movie</h1>
+            <a id="movieLink" target="_blank"><img class="mediaImg" id="movieImg" width=300 height=400></a>
+            <div class="summary" id="movieSummary"></div>
           </div>
-        <a href="index.html">Go Back Home</a>
-    </div>
+
+          <div class="category">
+            <h1>TV Show</h1>
+            <a id="showLink" target="_blank"><img class="mediaImg" id="showImg" width=300 height=400></a>
+            <div class="summary" id="showSummary"></div>
+          </div>
+          <div class="category">
+            <h1>Song</h1>
+            <a id="songLink" target="_blank"><img class="mediaImg" id="songImg" width=300 height=400></a>
+            <div class="summary" id="songSummary"></div>
+          </div>
+          <div class="category">
+            <h1>Book</h1>
+            <a id="bookLink" target="_blank"><img class="mediaImg" id="bookImg" width=300 height=400></a>
+            <div class="summary" id="bookSummary"></div>
+          </div>
+        </div>          
+        <div class="footer">
+          <a href="index.html">Go Back Home</a>
+        </div>
+      </div>
   </body>
 </html>
